--- a/css/style.css
+++ b/css/style.css
@@ -112,16 +112,16 @@ body {
   }
 
   .text {
-    font-size: 24px;
+    font-size: 18px;
   }
 }
 
 .btn {
-  background-color: #3882f6;
+  background-color: #0950be;
   padding: 8px;
   border: 0 none;
   border-radius: 4px;
-  color: #e5e7eb;
+  color: #fff;
 }
 
 .info-1 {
@@ -197,13 +197,13 @@ body {
   width: 800px;
   margin: auto;
   display: flex;
-  background-color: #3882f6;
+  background-color: #0950be;
   padding: 2rem;
   justify-content: space-around;
   align-items: center;
 }
 
-.sign-up-text h3 {
+.sign-up-text h2 {
   color: #e5e7eb;
   font-weight: bold;
 }
